samples/_failures_safe/1761125087_9f4bbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6fc4b83.c: In function ‘main’:
./samples/SAFE/__tmp_e6fc4b83.c:157:64: error: expected ‘)’ at end of input
  157 |     printf("Decompressed data (%zu bytes): ", decompressed.size
      |           ~                                                    ^
      |                                                                )
./samples/SAFE/__tmp_e6fc4b83.c:157:5: error: expected declaration or statement at end of input
  157 |     printf("Decompressed data (%zu bytes): ", decompressed.size
      |     ^~~~~~
